  in Hyndman and Fan (1996)
- irf(): support calculation of multiple impulse responses
  in a single call (with internal speed-up)
- irf() bug-fix: failing to compute bootstrap confidence band
  correctly when passed a $system bundle argument
- VAR internals: scrap augmented Cholesky matrix; so the
  $system.C accessor is now a square matrix
- $system accessor: ensure presence of xlist member
- mread(): support reading gdt and gdtb files as matrices
- readfile(): support reading gzipped files
- "open" command: support reading selected series from
  native gretl datafiles (gdt, gdtb)
- "join" command: support $obsmajor as an outer key
- "coint2" command: rename as "johansen"
- Fix bug: potential crash on "Save as icon and close" for
  a model displayed in tabbed model viewer
- Fix bug: possible crash on confusion between singleton
  array and array element within a loop
- Fix: memory leaks associated with GUI window lists
- Fix bug: buggy completion proposals in script editor
  when using gtksourceview-2.0
- Fix Windows-specific bug: gretlcli and gretlmpi could
  fail on parsing command-line arguments

2020-11-21 version 2020e
- New function tdisagg() for temporal disaggregation
  (distribution and interpolation)
- New addon package "regls": supports LASSO, Ridge regression
  and Elastic net
- New function assert() for debugging purposes
- MPI: update documentation and support transfer of more
  data types
- kdensity() function: generalize to allow as argument a
  list or matrix with more than one column
- "dataset sortby": handle sorting by string-valued series
- OLS output: don't print out DW statistic when calculation of
  Durbin's h fails
- Fix: when extracting a column of a "dated" matrix, copy
  across the dates information
- Documentation: add material on forecasting for VARs and
  other multi-equation systems
- Improve format of panel plot when there are many unnamed
  individuals
- gretlcli and gretlmpi on MS Windows: accept unicode filenames